image zoom and nav z-index conflict issue fix

--- a/skin/frontend/default/default/css/boxes.css
+++ b/skin/frontend/default/default/css/boxes.css
@@ -822,15 +822,15 @@ h1#logo {
     overflow:hidden;
     width:265px;
     height:265px;
-	z-index:9999;
+	z-index:9;
     }
 .product-img-box .main-product-img img {
-    position:relative;
+    position:absolute;
     left:2px;
     top:2px;
     width:100%;
     cursor:move;
-    z-index:999;
+    z-index:99;
     }
 .image-zoom {
 	z-index:9; position:relative; height:18px; margin:0 auto 13px auto; background:url(../images/slider_bg.gif) no-repeat 50% 50%; padding:0 28px 0 28px; cursor:pointer; }
