--- a/skin/frontend/default/default/css/menu.css
+++ b/skin/frontend/default/default/css/menu.css
@@ -15,7 +15,7 @@
  * @license    http://opensource.org/licenses/osl-3.0.php  Open Software License (OSL 3.0)
  */
 
-#nav { padding:0 20px; font-size:1.1em; }
+#nav { padding:0 20px; font-size:1.1em; z-index:999; }
 
 
 /************** ALL LEVELS  *************/ /* Style consistent throughout all nav levels */
